z-index fix

--- a/styles/base.less
+++ b/styles/base.less
@@ -14,6 +14,9 @@
 		}
 	}
 }
+.sqs-block[class*=float] {
+	z-index: 0 !important;
+}
 @media @phone {
 	.sqs-gallery-block-slideshow .meta {
 		display: block !important;
